# fastmd

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  FastMD.md  HANDOFF.md  LICENSE  Measure-StartupFirstPaint.ps1  README.md  build.ps1  fastmd.iss  package.ps1  startup-firstpaint.csv
resources/: fastmd.rc  resources.qrc
resources/licenses/: fastmd-MIT.txt  katex-MIT.txt  md4c-MIT.txt
scratch/: CMakeLists.txt
scripts/: package.ps1  publish.ps1  release.ps1
src/: DocumentModel.cpp  DocumentModel.h  ExportManager.cpp  ExportManager.h  FindReplaceDialog.cpp  FindReplaceDialog.h  IconHelper.h  LicensesDialog.cpp  LicensesDialog.h  MainWindow.cpp  MainWindow.h  MarkdownEditor.cpp  MarkdownEditor.h  MarkdownHighlighter.cpp  MarkdownHighlighter.h  OutlinePopup.cpp  OutlinePopup.h  PreferencesDialog.cpp  PreferencesDialog.h  PreviewWidget.cpp  PreviewWidget.h  StartupProfiler.h  Stylesheet.h  TabWidget.cpp  TabWidget.h  main.cpp
tools/pandoc/: NOTICE.txt
